# QXMD

./: .buildinfo  .gitignore  Makefile  QMXD_rst  QXMD_Manual_VS.md  QXMD_Manual_v3.2.md  README.md  config.sh  qxmd
CMake/: qxmdHelpers.cmake
Include/: ._fftw3.f03
QXMD/: Makefile  ba.F90  commwv.F90  eigen.F90  fft3.F90  input.F90  openfile.F90  pcc.F90  ppkbr.F90  pwlda.F90  reclat.F90  savedd.F90  tddft_fssh.F90  vxc.F90
Sources/: CMakeLists.txt  Makefile  allinc.f90  bulk.f90  chgdns.f90  datadump.f90  engrad.f90  fermi.f90  force.f90  ftmain.f90  funcs.f90  kpoints.f90  modules.f90  mpi_comm.f90  nlkbpp.f90  nlkbppr.f90  no_comm.f90  ppkb.f90  ppvd.f90  pwreset.f90  remd.f90  remd_disp.f90  remd_in.f90  remd_modules.f90  sbalin.f90  schmidt.f90  stress.f90
docs/: .references.bib.swp  IOf.html  Intro.html  conf.py  genindex.html  idx.html  index.html  install.html  install.rst  lic.html  objects.inv  output.html  param.html  param_1.html  program.html  py-modindex.html  references.bib  search.html  searchindex.js  support.html  util.html
docs/_sources/: IOf.rst.txt  Intro.rst.txt  index.rst.txt  install.rst.txt  lic.rst.txt  output.rst.txt  param.rst.txt  program.rst.txt  support.rst.txt  util.rst.txt
docs/_static/: documentation_options.js
docs/_theme/: README.html
docs/html/: .buildinfo  IOf.html  Intro.html  index.html  install.html  objects.inv  output.html  program.html  searchindex.js  util.html
docs/rst2pdf/: CHANGES.html  CODE_OF_CONDUCT.html  README.html
fftw-3.3.8/: Makefile  config.h  config.sh  config.status  libtool
manual/: IOf.rst  conf.py  index.rst  output.rst  param.rst  program.rst  util.rst
util/: README  eig.f  gcube.f90  gcube4.f90  install_fftw.sh  pick_config.f90  qxREAD.py  temp_species.f
(+1681 files in other folders)
